<resources>
    <string name="app_name">Health Wellness</string>
    <string name="last_name">"Last Name"</string>
    <string name="first_name">"First Name"</string>
    <string name="phone_number">"Phone Number"</string>
    <string name="birth_date">"Date of birth"</string>
    <string name="appoint_date">"Select Date</string>
    <string name="appoint_time">"Select Time</string>
    <string name="user_age">"Age"</string>
    <string name="email">"Email"</string>
    <string name="password">"Password"</string>
    <string name="connection">"Connection"</string>
    <string name="registration">"Registration"</string>
    <string name="connect">"Log in"</string>
    <string name="sign_in">"Sign in"</string>
    <string name="about">"About"</string>
    <string name="profile">"Profile"</string>
    <string name="add_appointment">"Book Appointments"</string>
    <string name="appointment_list">"My Appointments"</string>
    <string name="location">"Location"</string>
    <string name="help">"Help"</string>
    <string name="deconnection">"Log Out"</string>
    <string name="error_fields">Required fields</string>
    <string name="error_connexion">Connexion error</string>
    <string name="error_parameters">Error parameters</string>
    <string name="welcome">Welcome to HealthCare</string>
    <string name="wait">Please wait</string>
    <string name="success_save">Successful registration</string>
    <string name="error_save">Failed registration</string>
    <string name="app_email">healthwellness@healthwellness.com</string>
    <string name="register">ADD</string>
    <string name="title_activity_home_manager">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="specialty">Medical Specialty</string>
    <string name="doc_description">Description</string>
    <string name="title_activity_home_user">Home</string>
    <string name="text_one">The Health Wellness community at Presentation Medical Center was opened with dedication
        from the Sisters of Mary of the Presentation,
        a healthcare system driven by those who believe they can make a difference
        and value nursing the sick while providing spiritual care to all who desire to know God.
        Our outstanding healthcare professionals provide quality,
        skilled healthcare services with compassionate care to meet social, psychological and spiritual needs.
        Our values, mission and staff actively show that our duties of healing and guidance are the core
        driving factors at Presentation Medical Center..</string>

    <string name="text_welcome">The Health Wellness community at Presentation Medical Center was opened with dedication
        from the Sisters of Mary of the Presentation,
        a healthcare system driven by those who believe they can make a difference
        and value nursing the sick while providing spiritual care to all who desire to know God.</string>

      <string name="text_about">The Health Wellness community at Presentation Medical Center was opened with dedication
        from the Sisters of Mary of the Presentation,
        a healthcare system driven by those who believe they can make a difference
        and value nursing the sick while providing spiritual care to all who desire to know God.
        Our outstanding healthcare professionals provide quality,
        skilled healthcare services with compassionate care to meet social, psychological and spiritual needs.</string>

    <string name="text_two">If you need help and more information please join us in our social media pages
         by searching health_wellness </string>
    <string name="title_activity_location">Location</string>


</resources>
