<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_padding"
    tools:context="com.esmt.controller.healthwellness.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/colorDark"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/size_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/last_name"
        android:id="@+id/txtLastName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/first_name"
        android:id="@+id/txtFirstName"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/email"
        android:id="@+id/txtEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/password"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:hint="@string/phone_number"
        android:id="@+id/txtPhone"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_top"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:id="@+id/btnRegister"/>




</LinearLayout>
